tests/ui/associated-types/associated-types-unsized.stderr
error[E0277]: the size for values of type `<T as Get>::Value` cannot be known at compilation time
  --> $DIR/associated-types-unsized.rs:9:15
   |
LL |     let x = t.get();
   |               ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `<T as Get>::Value`
   = note: the return type of a function must have a statically known size
help: consider further restricting the associated type
   |
LL | fn foo<T:Get>(t: T) where <T as Get>::Value: Sized {
   |                     ++++++++++++++++++++++++++++++

error[E0277]: the size for values of type `<T as Get>::Value` cannot be known at compilation time
  --> $DIR/associated-types-unsized.rs:9:9
   |
LL |     let x = t.get();
   |         ^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `<T as Get>::Value`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
help: consider further restricting the associated type
   |
LL | fn foo<T:Get>(t: T) where <T as Get>::Value: Sized {
   |                     ++++++++++++++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
